kubernetes/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: magellan-search-ops
  labels:
    environment: production
    app: magellan-ops
