kubernetes/02-service-stable.yml
apiVersion: v1
kind: Service
metadata:
  name: magellan-backend-stable-svc
  namespace: magellan-search-ops
  labels:
    app: magellan-backend
    track: stable
spec:
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: magellan-backend
    track: stable
