kubernetes/05-ingress-stable.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: magellan-backend-stable-ingress
  namespace: magellan-search-ops
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: magellan-backend-stable-svc
                port:
                  number: 8000
